# hoatzin

./: Cargo.toml  LICENSE  README.md
hoatzin/: Cargo.toml
tree-sitter-hoatzin/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
tree-sitter-hoatzin/bindings/c/: tree-sitter-hoatzin.pc.in
tree-sitter-hoatzin/bindings/go/: binding.go  binding_test.go
tree-sitter-hoatzin/bindings/node/: binding.cc  index.js
tree-sitter-hoatzin/bindings/python/tests/: test_binding.py
tree-sitter-hoatzin/bindings/python/tree_sitter_hoatzin/: __init__.py  binding.c
tree-sitter-hoatzin/bindings/rust/: build.rs  lib.rs
tree-sitter-hoatzin/bindings/swift/TreeSitterHoatzin/: hoatzin.h
tree-sitter-hoatzin/bindings/swift/TreeSitterHoatzinTests/: TreeSitterHoatzinTests.swift
tree-sitter-hoatzin/src/: grammar.json  parser.c
