[package]
name = "tree-sitter-hoatzin"
description = "A Rust-inspired language for learning programming language development."
version = "0.1.0"
authors = ["John Hiatt <john.william.hiatt@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "hoatzin"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/sapoturge/hoatzin"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.2"
